--- a/index.html
+++ b/index.html
@@ -43,21 +43,29 @@
               <hr>
   
               <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
-              <p>TODO</p>
+              <p>Assessoria de Comunicação</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
               </div>
-              <p>TODO</p>
+              <p>Marketing</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
               </div>
-              <p>TODO</p>
+              <p>Gestão de Redes Sociais</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
               </div>
-              <p>TODO</p>
+              <p>Telejornalismo</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
+              </div>
+              <p>Planejamento de Comunicação</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
+              </div>
+              <p>Desenvolvimento de Sites - HTML e CSS</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
               </div>
               <br>
   
