--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About</h2>
-            <p>Jornalista com mais de 15 anos de experiência em diferentes funções e cargos de jornalismo. Atuei como repórter e produtor para afiliada da Rede Globo em Uberaba e afiliada do SBT em Sorocaba. Experiência também em jornalismo para web atuando no Portal G1 Triângulo Mineiro. Nos últimos anos me dediquei a gestão do setor de Comunicação Institucional e do Portal de Notícias da Universidade Federal do Triângulo Mineiro - UFTM. Atualmente tenho me dedicado a fazer cursos e me capacitar na área de comunicação, desenvolvimento de sites e sistemas. Entre as demais competências posso destacar mestre em educação tecnológica, biólogo e educador corporativo.</p>
+            <p align="justify">Jornalista com mais de 15 anos de experiência em diferentes funções e cargos de jornalismo. Atuei como repórter e produtor para afiliada da Rede Globo em Uberaba e afiliada do SBT em Sorocaba. Experiência também em jornalismo para web atuando no Portal G1 Triângulo Mineiro. Nos últimos anos me dediquei a gestão do setor de Comunicação Institucional e do Portal de Notícias da Universidade Federal do Triângulo Mineiro - UFTM. Atualmente tenho me dedicado a fazer cursos e me capacitar na área de comunicação, desenvolvimento de sites e sistemas. Entre as demais competências posso destacar mestre em educação tecnológica, biólogo e educador corporativo.</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
