completo experiência profissional

--- a/index.html
+++ b/index.html
@@ -104,21 +104,26 @@
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>UFTM - Universidade Federal do Triângulo Mineiro</b></h5>
+              <h5 class="w3-opacity"><b>UFTM - Universidade Federal do Triângulo Mineiro | servidor público</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
               <p align="justify">Gestão de equipe, redação de notícias e comunicados, gestão de sistema, atendimento a imprensa, comunicação interna, gestão de comunicação de crise, gestão de portal de comunicação.</p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - TODO</h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>TV Integração | Reportagem e Produção - TV e WEB</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
+              <p align="justify">Apuração de notícias. Edição de textos. Registro/fotos de notícias.</p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - TODO</h6>
-              <p>TODO</p><br>
+              <h5 class="w3-opacity"><b>TV Sorocaba | Repórter</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010</h6>
+              <p align="justify">Produção, apuração e realização de matérias para o telejornal Noticidade.</p><br>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>TV Integração | Produção</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010</h6>
+              <p align="justify">Produção de séries e reportagens para telejornal local de Uberaba e para programas regionais sobre agronegócio e saúde . Apuração de notícias.</p><br>
             </div>
           </div>
   
