--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
         <div class="w3-third">
   
           <div class="w3-white w3-text-grey w3-card-4">
-            <!-- @falvojr: This container has been modified to not use a profile picture. -->
-            <div class="w3-container">
-              <h2>LUIZ VIEIRA</h2>
+            <div class="w3-display-container">
+              <img src="https://media.licdn.com/dms/image/C4D03AQHSMWZwtk1X2g/profile-displayphoto-shrink_800_800/0/1658513743433?e=1695254400&v=beta&t=7ENBCGwTYvOKEOGSfV8eMbpKq8yRzSMehYYEudL6_eg" style="width:100%" alt="Avatar">
+              <div class="w3-display-bottomleft w3-container w3-text-black">
+                <h2>Luiz Vieira</h2>
+              </div>
             </div>
             <div class="w3-container">
               <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Comunicação, Marketing e Desenvolvimento de Sites</p>
