--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
     <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Find me on social media.</p>
       <a href="https://www.facebook.com/luiz.vieira.161"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-      <i class="fa fa-instagram w3-hover-opacity"></i>
-      <i class="fa fa-github w3-hover-opacity"></i>
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
+      <a href="https://www.instagram.com/luizvieira.jor"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/lcjornal/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      <a href="https://github.com/LuizVieirajordev"><i class="fa fa-github w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
