--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
             <h2 class="w3-text-grey w3-padding-16"><i
                 class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
+              <h5 class="w3-opacity"><b>Dio.me</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round">Forever</span></h6>
-              <p>TODO</p>
+              <p>HTML | CSS | Java | Python | PHP | outros.</p>
               <hr>
             </div>
             <div class="w3-container">
