--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="w3-display-container">
               <img src="https://media.licdn.com/dms/image/C4D03AQHSMWZwtk1X2g/profile-displayphoto-shrink_800_800/0/1658513743433?e=1695254400&v=beta&t=7ENBCGwTYvOKEOGSfV8eMbpKq8yRzSMehYYEudL6_eg" style="width:100%" alt="Avatar">
               <div class="w3-display-bottomleft w3-container w3-text-black">
-                <h2 style="background:#ffffff>Luiz Vieira</h2>
+                <h2 style="background-color:#ffffff">Luiz Vieira</h2>
               </div>
             </div>
             <div class="w3-container">
