--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!-- @falvojr: Reference article https://www.w3schools.com/howto/howto_website_create_resume.asp -->
-<!-- @falvojr: Useful link to use fontawesome (fa) icons: https://fontawesome.com/v4/icons/ -->
+<!-- Reference article https://www.w3schools.com/howto/howto_website_create_resume.asp -->
+<!-- Useful link to use fontawesome (fa) icons: https://fontawesome.com/v4/icons/ -->
 <html>
 
   <head>
@@ -19,7 +19,7 @@
     
   </head>
 
-  <body class="w3-light-grey" cz-shortcut-listen="true">
+  <body class="w3-teal" cz-shortcut-listen="true">
   
     <!-- Page Container -->
     <div class="w3-content w3-margin-top" style="max-width:1400px;">
