--- a/index.html
+++ b/index.html
@@ -138,6 +138,29 @@
               <h5 class="w3-opacity"><b>Dio.me</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round">Forever</span></h6>
               <p>HTML | CSS | Java | Python | PHP | outros.</p>
+              <ul>
+                <il>Introdução ao HTML na prática</il>
+                <il>Entendendo Comunicação Client X Server</il>
+              </ul>
+              <hr>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Alura</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round">Forever</span></h6>
+              <p>HTML | CSS | outros.</p>
+              <ul>
+                <li>HTML e CSS: ambientes de desenvolvimento, estrutura de arquivos e tags</li>
+                <li>Praticando CSS: Grid e Flexbox</li>
+                <li>Comunicação Corporativa: usando PowerPoint de forma efetiva</li>
+                <li>Comunicação participativa: liderança eficaz e motivadora</li>
+                <li>Google Ads: criando uma campanha</li>
+                <li>Mídias Sociais: estratégias para engajar público</li>
+                <li>Instagram para empresas: estratégia e planejamento</li>
+                <li>Tráfego pago: estratégias e aplicações</li>
+                <li>Flexbox: posicione elementos na tela</li>
+                <li>HTML5 e CSS3</li>
+                <li>Lógica de programação</li>
+              </ul>
               <hr>
             </div>
             <div class="w3-container">
