--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round">Forever</span></h6>
               <p>HTML | CSS | Java | Python | PHP | outros.</p>
               <ul>
-                <il>Introdução ao HTML na prática</il>
-                <il>Entendendo Comunicação Client X Server</il>
+                <li>Introdução ao HTML na prática</li>
+                <li>Entendendo Comunicação Client X Server</li>
               </ul>
               <hr>
             </div>
